# foodlyai

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
database/: database.py  db_middleware.py  models.py  repositories.py
handlers/: add_food.py  count_calories.py  fitness_profile_registration.py  my_progress.py  payment.py  product_composition.py  start.py  subscribe_status.py
keyboards/: __init__.py  add_food_kb.py  food_history_kb.py  main_kb.py  progress_kb.py  subscription_kb.py  tariffs_kb.py
migrations/: env.py
migrations/versions/: 23560da48a01_initial_migration.py  822b4aee4eba_first_migration.py  951979ccdb08_initial.py  a8173e18a8f6_initial_commit.py  deee2568bfd3_second_migration.py
services/: __init__.py  food_analyzer_service.py  image_processor.py  openai_service.py
states/: __init__.py  user_fitness_profile_st.py
static/: texts.py
utils/: decorators.py  formulas.py  keyboards.py  states.py  text_generators.py  validators.py
