[project]
name = "foodlyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "openai>=2.6.0",
    "ruff>=0.14.2",
    "sqlalchemy>=2.0.44",
]

[tool.basedpyright]
reportExplicitAny = false
reportMissingTypeStubs = false
reportMissingImports = true
reportImplicitOverride = false
reportAny = false
reportUnusedCallResult = false
reportOptionalMemberAccess = false
reportImplicitStringConcatenation = false
reportUnknownLambdaType = false
